API + frontend changes for bespoke benchmarking
